# kubelima

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: pr.yml  release.yml
src/: cli.rs  config.rs  main.rs  types.rs
src/commands/: cloud_init.rs  cluster.rs  kubeconfig.rs  mod.rs  mount.rs  node.rs  service.rs
src/lima/: mod.rs  template.rs
src/provisioner/: k3s.rs  mod.rs
